--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ footer li {
 
 footer i {
   font-size: 40px !important ;
-  color: #3b3b98;
+  color: crimson;
   position: absolute;
   top: 10px;
   left: 9px;
